Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-446

[SSL] when certificate validation fails, the connection is not cleanly closed.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • proton-0.6
    • proton-c
    • None

    Description

      Should a connection setup fail due to a certificate validation failure, the output side of the connection I/O never indicates an error has occurred.

      The input side of the connection properly returns PN_ERR on a read attempt.

      Attachments

        Activity

          People

            Unassigned Unassigned
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: