PROTON-446: manually set the proper shutdown state on SSL failure

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1537972 13f79535-47bb-0310-9956-ffa450edef68